--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="container">
        <h2 class="command-text">Наша команда</h2>
         <ul class="employees">
-          <li class="collaborator" img src="./images/demyanenko.jpg" width="270" alt="demyanenko">
+          <li class="collaborator">
             <img src="./images/demyanenko.png" width="270" alt="demyanenko">
             <h3 class="employees-text">Игорь Демьяненко</h3>
             <p class="employees-text-secondary">Product Designer</p>
@@ -355,7 +355,7 @@
      </div>
      <div class="subscribe">
        <form>
-         <h2 class="sub-text">Подпишитесь на рассылку</h2>
+         <p class="sub-text">Подпишитесь на рассылку</p>
          <div class="text-subcribe">
            <input type="email" class="email-footer" name="email-footer" placeholder="Email">
            <button class="button-text-subcribe"  type="submit">
@@ -375,24 +375,23 @@
         <svg width="11" height="11">
           <use href="./images/symbol-modal.svg#icon-off"></use>
         </svg>
-        
       </button>
       <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
       <form class="form">
         <div class="user-name">
-          <label class="label" for="user-name"><span class="user-text">Имя</span></label>
+          <label class="label" for="user_name"><span class="user-text">Имя</span></label>
           <div class="input-svg">
             <input class="input-svg-modal" type="text" name="user-name" id="user_name">
-            <svg class="modal-svg" width="18" height="18">
+            <svg class="modal-svg" width="12" height="12">
               <use href="./images/symbol-modal.svg#icon-men"></use> 
             </svg>
           </div>
         </div>
         <div class="tele">
-          <label class="label" for="user-tel"><span class="user-text">Телефон</span></label>
+          <label class="label" for="user_tel"><span class="user-text">Телефон</span></label>
           <div class="input-svg">
             <input class="input-svg-modal" type="tel" name="user-tel" id="user_tel">
-            <svg class="modal-svg" width="18" height="18">
+            <svg class="modal-svg" width="12" height="12">
              <use href="./images/symbol-modal.svg#icon-tele"></use>
             </svg>
           </div>
@@ -401,7 +400,7 @@
           <label class="label" for="user_email"><span class="user-text">Почта</span></label>
           <div class="input-svg">
             <input class="input-svg-modal" type="email" name="email" id="user_email" >
-            <svg class="modal-svg" width="18" height="18">
+            <svg class="modal-svg" width="12" height="12">
               <use href="./images/symbol-modal.svg#icon-email"></use>
             </svg>
           </div>
